# mlops-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: duration-prediction.ipynb
02-experiment-tracking/: duration-prediction.ipynb
cohorts/2025/: pyproject.toml
cohorts/2025/01-intro/: homework.ipynb  homework.md
cohorts/2025/02-experiment-tracking/: homework.md
cohorts/2025/02-experiment-tracking/homework/: hpo.py  preprocess_data.py  register_model.py  train.py
cohorts/2025/03-orchestration/: Dockerfile  docker-compose.yaml  homework.md  requirements.txt
cohorts/2025/03-orchestration/airflow/config/: airflow.cfg
cohorts/2025/03-orchestration/airflow/dags/: extract_data.py  hello_world.py  mlops_pipeline_v1.py
cohorts/2025/04-deployment/: homework.md
cohorts/2025/04-deployment/homework/: Dockerfile  README.md  predict.py  pyproject.toml  starter.ipynb
cohorts/2025/05-monitoring/: evidently_metrics_calculation.py  homework.md  pyproject.toml
cohorts/2025/05-monitoring/workspace/019a7b69-b1d0-7dc3-8a90-1ed9ebf3c7e1/: dashboard.json  metadata.json
cohorts/2025/05-monitoring/workspace/019a7b69-b1d0-7dc3-8a90-1ed9ebf3c7e1/snapshots/: 019a7b69-cf1f-731b-bb8f-e817e80a28e1.json  019a7b6a-08cb-769f-b8ff-428e9a14b2b5.json
cohorts/2025/06-best-practices/: homework.md
cohorts/2025/06-best-practices/homework/: Dockerfile  batch.py  docker-compose.yaml
cohorts/2025/06-best-practices/homework/tests/: integration_test.py  test_batch.py
