[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "hyperopt>=0.2.7",
    "isort>=7.0.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.0",
]
